--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -64,3 +64,10 @@ a {
   float: right;
 }
 
+/* iconfont */
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
